src/objects/echosign_dev1__Recipient_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Account_Contact_Role__c</fullName>
        <label>Account Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Recipient_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contact_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Add Recipients</relationshipLabel>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_Not_Create_Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</description>
        <inlineHelpText>Check this box if you do not want a blank placeholder recipient to be created on the agreement page if no record is found based on the selected criteria.</inlineHelpText>
        <label>Do Not Create Blank Recipient Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email_Recipient__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Group_Recipient__c</fullName>
        <label>Recipient - Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <description>Set the signing order index for the recipient generated by this template. Setting the same order number for multiple recipient templates will use hybrid recipients.</description>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Lead_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Add Recipients</relationshipLabel>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity_Contact_Role__c</fullName>
        <label>Opportunity Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Country_Code__c</fullName>
        <label>Phone Verification Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>353</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>354</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>358</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>380</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>421</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>504</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Phone_Verification_Phone_Number__c</fullName>
        <label>Phone Verification Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Field__c</fullName>
        <label>Select Source Field from Master Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Message__c</fullName>
        <description>Set a unique message for the recipient.</description>
        <inlineHelpText>Set a unique message for the recipient.</inlineHelpText>
        <label>Recipient Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Role__c</fullName>
        <label>Recipient Role</label>
        <picklist>
            <picklistValues>
                <fullName>Signer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Recipient_Relationship__c</fullName>
        <label>Related Recipient Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Field__c</fullName>
        <label>Related Selection Field</label>
        <picklist>
            <picklistValues>
                <fullName>Last Modified Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Related_Selection_Type__c</fullName>
        <label>Related Selection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Latest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oldest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signer_Verification_Method__c</fullName>
        <label>Signer Verification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Source of Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>Predefine the Recipient</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Look Up Based on Master Object Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Primary Contact Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Contact Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Opportunity Contact Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Primary Contact Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Contact Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Account Contact Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runtime Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Uniform_Index__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</description>
        <inlineHelpText>Enable this option to set the same index for a template which results in multiple recipients, making them hybrid signers.</inlineHelpText>
        <label>Uniform Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__User_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recipient_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Variable_Name__c</fullName>
        <label>Variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Add Recipient</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Recipient Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>